compile on Java 8